--- a/blogpost.html
+++ b/blogpost.html
@@ -334,6 +334,7 @@
                 <p>Angel Infanti</p>
                 <p>Uralberto</p>
                 <p>Anderson Contreras</p>
+                <p> Carolina Hernández </p>
                 <p>Paula Becerra</p>
                 <p>Jesús Noel Valdibiezo Mora</p>
                 <p>Zuriel hdez</p>
